--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
 	display: grid;
-	background-image: url('img/back.webp'); 
+	background-image: url('/img/back.webp'); 
 	grid-template-columns: 3fr 2fr;
 	background-size: cover;
 }
